# dice-roller

./: .env  .gitignore  .npmignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  esbuild.config.mjs  esbuild.config.mjs.old  index.ts  manifest.json  package-lock.json  package.json  release-please-config.json  rollup.config.js  styles.css  tsconfig.json  versions.json  vitest.config.ts  webpack.config.js  webpack.dev.js
.github/ISSUE_TEMPLATE/: bug-report.yaml  code-report.yml  documentation-update.yaml  feature-request.yaml
.github/workflows/: publish.yml  release-please.yml  release.yml
@types/: index.d.ts
@types/obsidian/: obsidian.d.ts
crate/: .gitignore  Cargo.toml
crate/src/: lib.rs  obsidian.rs  parsing.rs
crate/src/parsing/: ast.rs  calculator.rs  lexer.rs  parser.rs
src/: constants.ts  live-preview.ts  main.css  main.ts  parser.ts  roller.ts  settings.ts  styles.css  util.ts
src/api/: api.dataview.ts  api.ts
src/assets/: main.css
src/editor/: index.ts
src/lexer/: lexer.ts
src/parser/: lexer.ts  parser.ts
src/processor/: live-preview.ts  processor.ts
src/renderer/: font.css  geometries.ts  renderer.ts  resource.ts  scene.ts  shapes.ts
src/roller/: dice.ts  file.ts  index.ts  line.ts  link.ts  roller.ts  section.ts  table.ts  tag.ts
src/rollers/: roller.ts  section.ts
src/rollers/dice/: dice.ts  fudge.ts  narrative.ts  percentage.ts  (+3 more)
src/settings/: settings.const.ts  settings.css  settings.ts  settings.types.ts
src/suggester/: folder.ts  fonts.ts  path.ts  suggester.ts
src/types/: api.ts  dataview-ext.d.ts  global.d.ts  index.ts  obsidian-ext.d.ts  svelte.d.ts
src/utils/: constants.ts  icons.ts  util.ts
src/view/: orbit.js  renderer.ts  view.css  view.icons.ts  view.ts
test/: util.ts
test/parser/: lexer.test.js  lexer.test.ts
(+8 files in other folders)
