[package]
name = "crate"
version = "0.1.0"
authors = ["Jeremy Valentine <38669521+valentine195@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
logos = "0.13.0"
three-d = "0.16.3"
js-sys = "0.3"
#rapier3d = { version = "*", features = [ "wasm-bindgen" ] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window","console"
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.66"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
